<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linear">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Unlock Your Potential: Code Your Dreams into Reality!"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_email"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:hint="Email id"
                    style="@style/textInputLayoutStyle"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <TextView
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emailError"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck" />


                </com.google.android.material.textfield.TextInputLayout>


                <ProgressBar
                    android:id="@+id/pgBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_password"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:hint="Password"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/passwordError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passwordError"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/purple_700"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textSize="14sp"
                    app:cornerRadius="12dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLaoutHoriz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/txtForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetpassword"
                    android:textColor="#2196F3"
                    android:textSize="16sp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountNotexit"
                    android:textColor="#2196F3"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
