<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    tools:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lt_common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:text="Registration"
                    android:layout_gravity="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="8dp"
                    android:hint="Name"
                    app:startIconDrawable="@drawable/baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck"
                        tools:text="sanjay" />

                    <TextView
                        android:id="@+id/nameError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nameError"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="8dp"
                    android:hint="Email"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emailError"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_mobile"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="8dp"
                    android:hint="Mobile"
                    app:startIconDrawable="@drawable/baseline_contact_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mobile"
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/mobileError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mobileError"
                        android:textColor="@color/red"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_univercity_name"
                    style="@style/textInputLayoutStyle"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="Univercity Name"
                    app:startIconDrawable="@drawable/baseline_school_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_univercity_name"
                        style="@style/multilineEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="8dp"
                    android:hint="Password"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/baseline_password_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLength="8"
                        android:password="true"
                        tools:ignore="Deprecated,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/passwordError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passwordError"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Password should be"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardOne"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:cardBackgroundColor="#dcdcdc"
                            app:cardCornerRadius="25dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:background="@drawable/check" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:text="At least 8 character"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardTwo"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:cardBackgroundColor="#dcdcdc"
                            app:cardCornerRadius="25dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:background="@drawable/check" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:text="Minimum one upper chrachter"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardThree"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:cardBackgroundColor="#dcdcdc"
                            app:cardCornerRadius="25dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:background="@drawable/check" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:text="Minimum one number"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardFour"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:cardBackgroundColor="#dcdcdc"
                            app:cardCornerRadius="25dp">

                            <ImageView
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_gravity="center"
                                android:background="@drawable/check" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:text="Minimum one symbol(@,#)"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_confirmpassword"
                    style="@style/textInputLayoutStyle"
                    android:layout_marginTop="8dp"
                    android:hint="Conform Password"
                    android:visibility="gone"
                    app:startIconDrawable="@drawable/baseline_beenhere_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirmpassword"
                        style="@style/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:password="true"
                        tools:ignore="Deprecated,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/submit" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Login"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>